@@ -1,0 +1,53 @@
+film.width = 800
+film.height = 600
+# Use a value > 0 to enable batch mode
+batch.halttime = 0
+scene.file = wb.scn
+opencl.cpu.use = 1
+opencl.gpu.use = 1
+# Select the OpenCL platform to use (0=first platform available, 1=second, etc.)
+#opencl.platform.index = 0
+# The string select the OpenCL devices to use (i.e. first "0" disable the first
+# device, second "1" enable the second).
+#opencl.devices.select = 10
+# This value select the number of threads to use for keeping
+# each OpenCL devices busy
+#opencl.renderthread.count = 2
+# Use a value of 0 to enable default value
+opencl.gpu.workgroup.size = 64
+screen.refresh.interval = 100
+path.pathdepth.total = 5
+#path.russianroulette.depth = 5
+#path.clamping.variance.maxvalue = 1
+# Film image pipeline plug-ins
+film.imagepipeline.0.type = WHITE_BALANCE
+film.imagepipeline.0.temperature = 3000
+film.imagepipeline.0.reverse = 1
+film.imagepipeline.0.normalize = 0
+film.imagepipeline.1.type = TONEMAP_LINEAR
+film.imagepipeline.1.scale = 1
+film.imagepipeline.2.type = GAMMA_CORRECTION
+film.imagepipeline.2.value = 2.2
+#film.imagepipeline.2.type = CONTOUR_LINES
+#film.imagepipeline.2.range = 100
+#film.imagepipeline.2.steps = 10
+#film.imagepipeline.2.zerogridsize = 8
+##
+#film.outputs.1.type = RGB
+#film.outputs.1.filename = bigmonkey.hdr
+#film.outputs.2.type = IRRADIANCE
+#film.outputs.2.filename = bigmonkey-irr.hdr
+##
+film.outputs.0.type = RGB_IMAGEPIPELINE
+film.outputs.0.index = 0
+film.outputs.0.filename = normal.png
+film.outputs.1.type = SAMPLECOUNT
+film.outputs.1.filename = SAMPLECOUNT.png
+film.outputs.2.type = CONVERGENCE
+film.outputs.2.filename = CONVERGENCE.png
+film.outputs.3.type = USER_IMPORTANCE
+film.outputs.3.filename = USER_IMPORTANCE.png
+film.outputs.4.type = ALBEDO
+film.outputs.4.filename = ALBEDO.png
+film.outputs.5.type = ALPHA
+film.outputs.5.filename = ALPHA.png
