@@ -1,0 +1,31 @@
+scene.camera.lookat.orig = 5.0 -16.0 5.0
+scene.camera.lookat.target = 1.0 0.0 1.0
+################################################################################
+scene.textures.lighttex.type = blackbody
+scene.textures.lighttex.temperature = 6500
+scene.textures.lighttex.normalize = 0
+################################################################################
+scene.materials.redmat.type = matte
+scene.materials.redmat.kd = 0.75 0.0 0.0
+scene.materials.redmat.holdout.enable = 0
+##
+scene.materials.whitematte.type = matte
+scene.materials.whitematte.kd = 0.75 0.75 0.75
+##
+scene.materials.whitelight.type = matte
+scene.materials.whitelight.emission = lighttex
+scene.materials.whitelight.emission.gain = 10 10 10
+scene.materials.whitelight.kd = 0.0 0.0 0.0
+################################################################################
+scene.shapes.monkey.type = mesh
+scene.shapes.monkey.ply = scenes/bigmonkey/bigmonkey.ply
+################################################################################
+scene.objects.back.material = whitematte
+scene.objects.back.ply = scenes/bigmonkey/room.ply
+##
+scene.objects.red.material = redmat
+scene.objects.red.ply = monkey
+##
+scene.objects.l1.material = whitelight
+scene.objects.l1.ply = scenes/bigmonkey/bigmonkey-lights.ply
+scene.objects.l1.camerainvisible = 1
